@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.1 2018/03/03 01:23:29 minskim Exp $
+$NetBSD: distinfo,v 1.2 2019/07/31 20:16:40 brook Exp $
 
-SHA1 (R/poweRlaw_0.70.1.tar.gz) = 42bd51a5062f3ab3d482eca415db69dba4c151c9
-RMD160 (R/poweRlaw_0.70.1.tar.gz) = 3041e8a618599c0dcf75a606e5459dce41f2e527
-SHA512 (R/poweRlaw_0.70.1.tar.gz) = c114d56185bbee78739c68e600fdc656a0d3a52a2bf625a2b7ae462f331610ce19ade4f59ebbb51b47f75a67229f1d968b34afee9da768b324ba1a5877c92a88
-Size (R/poweRlaw_0.70.1.tar.gz) = 4081696 bytes
+SHA1 (R/poweRlaw_0.70.2.tar.gz) = 01e60c15d3c609b824839303cf6bdc2a7c0e6ad5
+RMD160 (R/poweRlaw_0.70.2.tar.gz) = 7c920fe121dda38ca8bf2b4d1310f73470fb0453
+SHA512 (R/poweRlaw_0.70.2.tar.gz) = f96b89bab6120dcfbb9edfd71db8b7182872053d65db969caa523f5559eb48409313acc0193e9595ffc7a1f546893cc30c838abd195d4bb75efc19aabc297429
+Size (R/poweRlaw_0.70.2.tar.gz) = 4315696 bytes
