@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3190 2019/07/31 20:03:24 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3191 2019/07/31 20:16:40 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5147,3 +5147,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-mvtnorm to 1.0.11 [brook 2019-07-31]
 	Updated math/R-nloptr to 1.2.1 [brook 2019-07-31]
 	Updated math/R-numDeriv to 2016.8.1.1 [brook 2019-07-31]
+	Updated math/R-poweRlaw to 0.70.2 [brook 2019-07-31]
